k8s/prod/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forohtoo-worker
  labels:
    app: forohtoo-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forohtoo-worker
  template:
    metadata:
      labels:
        app: forohtoo-worker
    spec:
      containers:
      - name: worker
        image: brojonat/forohtoo:9882909ae64bd71cc9c41840ead553da1eb23b4c
        imagePullPolicy: Always
        command: ["/worker"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
      imagePullSecrets:
      - name: regcred
