k8s/prod/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: forohtoo-server
  labels:
    app: forohtoo-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: forohtoo-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forohtoo-server
  labels:
    app: forohtoo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forohtoo-server
  template:
    metadata:
      labels:
        app: forohtoo-server
    spec:
      containers:
      - name: server
        image: brojonat/forohtoo:41e4fd927a69f0c54ef9fe567a09231b1d0b8602
        imagePullPolicy: Always
        command: ["/server"]
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
      imagePullSecrets:
      - name: regcred
