k8s/prod/worker-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forohtoo-worker-metrics
  labels:
    app: forohtoo-worker
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9091"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: forohtoo-worker
  ports:
  - name: metrics
    port: 9091
    targetPort: 9091
    protocol: TCP
  type: ClusterIP
